--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <title>Ecore Editor</title>
 
-        <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
         <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
         <link type="text/css" rel="stylesheet" href="css/ecore.edit.css">
@@ -25,6 +24,8 @@
             </div>
         </div>
 
+        <div id="property-window"></div>
+
         <script type="text/javascript" src="scripts/lib/underscore.js"></script>
         <script type="text/javascript" src="scripts/lib/sax.js"></script>
         <script type="text/javascript" src="scripts/lib/jquery-1.8.1.min.js"></script>
@@ -33,7 +34,7 @@
         <script type="text/javascript" src="scripts/lib/ecore.js"></script>
         <script type="text/javascript" src="scripts/lib/ecore.edit.js"></script>
         <script type="text/javascript" src="scripts/lib/raphael.js"></script>
-        <script type="text/javascript" src="scripts/lib/diagrams.min.js"></script>
+        <script type="text/javascript" src="scripts/lib/diagrams.js"></script>
         <script type="text/javascript" src="scripts/app.js"></script>
     </body>
 </html>
