update app loading

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <script type="text/javascript" src="scripts/lib/jquery-1.8.1.min.js"></script>
         <script type="text/javascript" src="scripts/lib/backbone-min.js"></script>
         <script type="text/javascript" src="scripts/lib/bootstrap.min.js"></script>
-        <script type="text/javascript" src="scripts/lib/ecore.js"></script>
-        <script type="text/javascript" src="scripts/lib/ecore.edit.js"></script>
+        <script type="text/javascript" src="scripts/lib/ecore.min.js"></script>
+        <script type="text/javascript" src="scripts/lib/ecore.edit.min.js"></script>
         <script type="text/javascript" src="scripts/lib/raphael.js"></script>
-        <script type="text/javascript" src="scripts/lib/diagrams.js"></script>
-        <script type="text/javascript" src="scripts/app.js"></script>
+        <script type="text/javascript" src="scripts/lib/diagrams.min.js"></script>
+        <script type="text/javascript" src="scripts/app.min.js"></script>
     </body>
 </html>
