min diagrams does not work.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <script type="text/javascript" src="scripts/lib/ecore.min.js"></script>
         <script type="text/javascript" src="scripts/lib/ecore.edit.min.js"></script>
         <script type="text/javascript" src="scripts/lib/raphael.js"></script>
-        <script type="text/javascript" src="scripts/lib/diagrams.min.js"></script>
+        <script type="text/javascript" src="scripts/lib/diagrams.js"></script>
         <script type="text/javascript" src="scripts/app.min.js"></script>
     </body>
 </html>
