--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <title>Ecore Editor</title>
 
-        <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-        <link type="text/css" rel="stylesheet" href="css/ecore.edit.css">
-        <link type="text/css" rel="stylesheet" href="css/app.css">
+        <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+        <link type="text/css" rel="stylesheet" href="assets/css/ecore.edit.css">
+        <link type="text/css" rel="stylesheet" href="assets/css/app.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
         <!--[if lt IE 9]>
@@ -18,36 +18,38 @@
     <body>
 
         <div id="auto">
+            <div id="header"></div>
             <div id="contents">
                 <div id="navigator"></div>
                 <div id="main"></div>
             </div>
+            <div id="footer"></div>
         </div>
 
-        <div id="property-window"></div>
+        <script type="text/javascript" src="assets/lib/underscore-min.js"></script>
+        <script type="text/javascript" src="assets/lib/sax.js"></script>
+        <script type="text/javascript" src="assets/lib/jquery-1.8.1.min.js"></script>
+        <script type="text/javascript" src="assets/lib/backbone-min.js"></script>
+        <script type="text/javascript" src="assets/lib/bootstrap.min.js"></script>
+        <script type="text/javascript" src="assets/lib/ecore.min.js"></script>
+        <script type="text/javascript" src="assets/lib/ecore.edit.min.js"></script>
+        <script type="text/javascript" src="assets/lib/svg.min.js"></script>
+        <script type="text/javascript" src="assets/lib/svg.draggable.min.js"></script>i
+        <script type="text/javascript" src="assets/lib/diagrams.js"></script>
+        <script type="text/javascript" src="assets/app.js"></script>
 
-        <script type="text/javascript" src="scripts/lib/underscore.js"></script>
-        <script type="text/javascript" src="scripts/lib/sax.js"></script>
-        <script type="text/javascript" src="scripts/lib/jquery-1.8.1.min.js"></script>
-        <script type="text/javascript" src="scripts/lib/backbone-min.js"></script>
-        <script type="text/javascript" src="scripts/lib/bootstrap.min.js"></script>
-        <script type="text/javascript" src="scripts/lib/ecore.min.js"></script>
-        <script type="text/javascript" src="scripts/lib/ecore.edit.min.js"></script>
-        <script type="text/javascript" src="scripts/lib/raphael.js"></script>
-        <script type="text/javascript" src="scripts/lib/diagrams.min.js"></script>
-        <script type="text/javascript" src="scripts/app.min.js"></script>
-        
-        
-        <script type="text/javascript">        
+<!--
+        <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-1808466-10']);
             _gaq.push(['_trackPageview']);
 
-            (function() 
+            (function() {
                 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
                 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
                 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
             })();
         </script>
+-->
     </body>
 </html>
